<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_moment"
        android:icon="@drawable/ic_moment"
        android:title="@string/lbl_moment"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/lbl_chat"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_contact"
        android:icon="@drawable/ic_contact"
        android:title="@string/lbl_contacts"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_me"
        android:icon="@drawable/ic_user"
        android:title="@string/lbl_me"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_menu_burger"
        android:title="@string/lbl_setting"
        app:showAsAction="always" />

</menu>