<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.NewGroupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingStart="@dimen/margin_medium_2"
            android:src="@drawable/ic_baseline_close_accent_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_xxlarge"
            android:layout_toStartOf="@id/btnCreate"
            android:fontFamily="serif"
            android:text="New Group"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_heading_1x"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_big"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:background="@drawable/background_button_log_in"
            android:elevation="2dp"
            android:fontFamily="serif"
            android:text="@string/lbl_create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_small_n"
        android:text="Group Name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_regular_2x" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogin"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etGroupName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="serif"
            android:singleLine="true"
            android:textSize="@dimen/text_regular_2x" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSearch"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        app:cardCornerRadius="@dimen/margin_card_medium">

        <RelativeLayout
            android:id="@+id/rlSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_search_bar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnSearchContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_medium_2"
                android:src="@drawable/ic_baseline_search_accent_24" />

            <EditText
                android:id="@+id/tvSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_toStartOf="@id/ivClear"
                android:layout_toEndOf="@id/btnSearchContact"
                android:background="@android:color/transparent"
                android:text="@string/lbl_search"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_regular_2x" />

            <ImageView
                android:id="@+id/ivClear"
                android:layout_width="@dimen/margin_xlarge"
                android:layout_height="@dimen/margin_xlarge"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:padding="@dimen/margin_small"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_close_accent_24" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSelectedContactsNewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:paddingStart="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:text="@string/lbl_contacts"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCheckableContactsNewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2" />

</LinearLayout>