<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBackSignUp"
            android:layout_width="@dimen/margin_large"
            android:layout_height="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:src="@drawable/ic_baseline_arrow_accent_back_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnBackSignUp"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:fontFamily="serif"
            android:text="Hi !"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_heading_2x"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHi"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_card_medium"
            android:text="@string/lbl_create_a_new_account"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular_2x" />

        <ImageView
            android:id="@+id/ivSignUp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/tvCreateNewAccount"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:src="@drawable/sign_up_otp_picture" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailForSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivSignUp"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:fontFamily="serif"
            android:hint="Enter Your Email"
            android:textSize="@dimen/text_small" />


        <LinearLayout
            android:id="@+id/llSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etEmailForSignUp"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_large"
            android:orientation="horizontal"
            android:weightSum="10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumberSignUp"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="7"
                android:fontFamily="serif"
                android:hint="@string/lbl_enter_your_phone_number"
                android:inputType="number"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textSize="@dimen/text_small" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGetOTP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:background="@drawable/background_button_log_in"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/lbl_get_otp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOTP"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/llSignUp"
            android:layout_marginStart="@dimen/margin_xxlarge"
            android:layout_marginEnd="@dimen/margin_xxlarge"
            android:dividerPadding="@dimen/margin_medium_2"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"

                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/margin_small"
                app:cardElevation="@dimen/margin_small">

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/margin_small"
                app:cardElevation="@dimen/margin_small">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/margin_small"
                app:cardElevation="@dimen/margin_small">

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/margin_small"
                app:cardElevation="@dimen/margin_small">

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />


            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNotReceive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llOTP"
            android:layout_marginStart="@dimen/margin_xxlarge"
            android:layout_marginTop="@dimen/margin_card_medium_2"
            android:layout_marginEnd="@dimen/margin_xxlarge"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/tvDontReceiveOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:text="Don't receive the OTP?"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Resend Code"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llNotReceive"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="@drawable/background_button_log_in"
            android:fontFamily="serif"
            android:paddingStart="@dimen/margin_card_medium"
            android:paddingEnd="@dimen/margin_card_medium"
            android:text="Verify"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/btnSignUpWithEmailSplash"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_marginStart="@dimen/margin_medium"-->
<!--            android:layout_marginBottom="@dimen/margin_large"-->
<!--            android:layout_toEndOf="@id/btnVerify"-->
<!--            android:background="@drawable/background_button_log_in"-->
<!--            android:paddingStart="@dimen/margin_card_medium"-->
<!--            android:paddingEnd="@dimen/margin_card_medium"-->
<!--            android:text="Sign Up With Email"-->
<!--            android:textColor="@color/white" />-->


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>

